# qwen3_vl_retrieval

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
data/: __init__.py  collator.py  dataset.py  hard_negative_miner.py
evaluation/: __init__.py  metrics.py
examples/: __init__.py  end_to_end_demo.py  index_documents.py  query_retrieval.py
inference/: model_loader.py
models/: __init__.py  colqwen3vl.py  processing_colqwen3vl.py
retrieval/: __init__.py  binary_first_stage.py  binary_quantizer.py  embedding_store.py  first_stage_retriever.py  second_stage_reranker.py
scripts/: __init__.py  benchmark.py  download_vidore.py  evaluate.py  preprocess_data.py  rebuild_json_from_images.py  train.py
tests/: __init__.py  test_lora_training.py  test_property_batch_masking.py  test_property_binary_quantization.py  test_property_embedding.py  test_property_embedding_store.py  test_property_evaluation_metrics.py  test_property_first_stage_retrieval.py  test_property_infonce_loss.py  test_property_maxsim.py  test_property_query_embedding.py  test_property_second_stage_reranker.py
training/: __init__.py  config.py  losses.py  trainer.py
utils/: __init__.py  logging_utils.py  torch_utils.py
