[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-vl-retrieval"
version = "0.1.0"
description = "Two-stage multimodal document retrieval system based on Qwen3-VL-4B"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Qwen3-VL RAG Team"}
]
keywords = [
    "multimodal",
    "retrieval",
    "qwen",
    "vision-language",
    "rag",
    "colpali"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.45.0",
    "accelerate>=0.25.0",
    "peft>=0.7.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "safetensors>=0.4.0",
    "lmdb>=1.4.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "einops>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
flash-attn = [
    "flash-attn>=2.5.0",
]
eval = [
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/qwen3-vl-rag/qwen3-vl-retrieval"
Documentation = "https://github.com/qwen3-vl-rag/qwen3-vl-retrieval#readme"
Repository = "https://github.com/qwen3-vl-rag/qwen3-vl-retrieval"

[tool.setuptools.packages.find]
where = ["."]
include = ["qwen3_vl_retrieval*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
